--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,395 @@
-/* LESS needs to be processed */
+.content {
+  padding-left: 1%;
+  padding-right: 0;
+}
+.displaycolumn {
+  display: flex;
+  flex-direction: column;
+}
+.displaycenter {
+  display: flex;
+  align-items: center;
+}
+button {
+  background-color: indigo;
+  width: 70%;
+  padding: 5%;
+  border-radius: 10px;
+  font-size: medium;
+  margin-left: 5%;
+  cursor: pointer;
+}
+@media (max-width:500px) {
+  button {
+    background-color: aqua;
+    width: 88%;
+    padding: 3%;
+    cursor: pointer;
+  }
+}
+button:hover {
+  background-color: #8600e8;
+  color: white;
+}
+@media (max-width:500px) {
+  button:hover {
+    background-color: #009999;
+    color: white;
+  }
+}
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+* {
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+}
+html,
+body {
+  font-family: 'Roboto', sans-serif;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'Indie Flower', cursive;
+}
+h1 {
+  font-size: 4rem;
+}
+h2 {
+  font-size: 3.2rem;
+  padding-bottom: 10px;
+}
+h4 {
+  font-size: 2.5rem;
+  padding-bottom: 10px;
+}
+p {
+  line-height: 1.5;
+  font-size: 1.6rem;
+  padding-bottom: 10px;
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
+.container {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+}
+.navbar {
+  display: flex;
+  flex-direction: row;
+  width: inherit;
+  margin-top: 5%;
+  margin-bottom: 2%;
+  border-width: 100%;
+}
+@media (max-width:500px) {
+  .navbar {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.navbar .fun {
+  text-align: left;
+}
+@media (max-width:500px) {
+  .navbar .fun {
+    text-align: center;
+  }
+}
+.navbar nav {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 75%;
+}
+@media (max-width:500px) {
+  .navbar nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: initial;
+    padding-top: 3%;
+  }
+}
+.navbar a {
+  text-decoration: none;
+  display: flex;
+  color: black;
+  padding-left: 15%;
+  font-size: medium;
+}
+@media (max-width:500px) {
+  .navbar a {
+    display: flex;
+    padding-left: inherit;
+  }
+}
+.footer {
+  width: 100%;
+  border-top: 2px dashed silver;
+  background: #FFEBCD;
+}
+.footer p {
+  text-align: center;
+  color: #212529;
+  font-size: 1.6rem;
+  padding: 20px;
+}
+@media (max-width:500px) {
+  .home {
+    padding: 3%;
+  }
+}
+.home .header {
+  border-top: 2px dashed silver;
+  padding-bottom: 2%;
+  border-bottom: 2px dashed silver;
+}
+.home .header img:hover {
+  opacity: 0.5;
+}
+.home h2 {
+  padding-top: 3%;
+}
+.home .content-section {
+  margin: 30px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+@media (max-width:500px) {
+  .home .content-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.home .content-section .text-content {
+  width: 48%;
+  padding-right: 1%;
+}
+@media (max-width:500px) {
+  .home .content-section .text-content {
+    width: auto;
+  }
+}
+.home .content-section .img-content {
+  width: 48%;
+  padding-left: 1%;
+}
+.home .content-section .img-content:hover {
+  opacity: 0.5;
+}
+@media (max-width:500px) {
+  .home .content-section .img-content {
+    width: 100%;
+    padding: inherit;
+  }
+}
+.home .content-section .img-content img {
+  border-radius: 10px;
+}
+@media (max-width:500px) {
+  .home .content-section .img-content img {
+    width: 100%;
+  }
+}
+.home .inverse-content {
+  padding-bottom: 30px;
+  border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width:500px) {
+  .home .inverse-content {
+    display: flex;
+    flex-direction: column-reverse;
+    padding-bottom: inherit;
+  }
+}
+.home .inverse-content .text-content {
+  padding-left: 1%;
+  padding-right: 0;
+}
+.home .inverse-content .img-content {
+  padding-left: 1%;
+  padding-right: 0;
+}
+.home .inverse-content .img-content:hover {
+  opacity: 0.5;
+}
+.home .content-destination {
+  width: 75%;
+  margin: 0 auto 30px;
+}
+@media (max-width:500px) {
+  .home .content-destination {
+    width: auto;
+  }
+}
+.home .content-destination img {
+  border-radius: 10px;
+}
+.home .content-destination img:hover {
+  opacity: 0.5;
+}
+@media (max-width:500px) {
+  .home .content-destination img {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+.home .content-pick {
+  padding-top: 30px;
+  border-top: 2px dashed #C0C0C0;
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width:500px) {
+  .home .content-pick {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+  }
+}
+.home .content-pick .destination {
+  width: 30%;
+  margin-bottom: 30px;
+}
+@media (max-width:500px) {
+  .home .content-pick .destination {
+    width: 100%;
+  }
+}
