--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,24 +1,65 @@
 .home {
 
+  @media @mobile {
+    padding: 3%;
+  }
+  
+  .header {
+    border-top: 2px dashed silver;
+    padding-bottom: 2%;
+    border-bottom: 2px dashed silver;
+
+      img {
+        &:hover {
+          opacity: .5;
+        }
+      }
+  }
+
+    h2 {
+      padding-top: 3%;
+    }
+
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
+    @media @mobile {
+      .displaycolumn();
+      align-items: center;
+    }
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile {
+        width: auto;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
 
+      &:hover {
+        opacity: .5;
+      }
+
+      @media @mobile {
+        width: 100%;
+        padding: inherit;
+      }
+
       img {
         border-radius: 10px;
+
+        @media @mobile {
+          width: 100%;
+        }
+
       }
     }
   }
@@ -27,14 +68,22 @@
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
 
+    @media @mobile {
+      display: flex;
+      flex-direction: column-reverse;
+      padding-bottom: inherit;
+    }
+
     .text-content {
-      padding-left: 1%;
-      padding-right: 0;
+      .content();
     }
 
     .img-content {
-      padding-right: 1%;
-      padding-left: 0;
+      .content();
+
+        &:hover {
+          opacity: .5;
+        }
     }
   }
 
@@ -42,8 +91,22 @@
     width: 75%;
     margin: 0 auto 30px;
 
+    @media @mobile {
+      width: auto;
+    }
+
     img {
       border-radius: 10px;
+      
+      &:hover {
+        opacity: .5;
+      }
+
+      @media @mobile {
+        margin-left: auto;
+        margin-right: auto;
+      }
+
     }
   }
 
@@ -53,9 +116,19 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+      .displaycolumn;
+      align-items: center;
+      align-content: center;
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      @media @mobile {
+        width: 100%;
+      }
     }
   }
 }// home
