--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,29 @@
 // Mixins in here
+
+button {
+    background-color: indigo;
+    width: 70%;
+    padding: 5%;
+    border-radius: 10px;
+    font-size: medium;
+    margin-left: 5%;
+    cursor: pointer;
+    // font-weight: bold;
+
+    @media @mobile {
+        background-color: aqua;
+        width: 88%;
+        padding: 3%;
+        cursor: pointer;
+    }
+
+        &:hover {
+            background-color: lighten(indigo,20%);
+            color: white;
+
+            @media @mobile {
+                background-color: darken(aqua,20%);
+                color: white;
+            }
+        }
+}
