--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,56 @@
 // Navigation Styles here
+
+.navbar {
+    display: flex;
+    flex-direction: row;
+    // border-bottom: 1px dashed grey;
+    // padding-bottom: 5%;
+    width: inherit;
+    margin-top: 5%;
+    margin-bottom: 2%;
+    border-width: 100%;
+
+        @media @mobile {
+            .displaycolumn();
+        }
+
+        .fun {
+            text-align: left;
+
+                @media @mobile {
+                    text-align: center;
+                }
+        } //fun
+
+            nav {
+                .displaycenter();
+                justify-content: flex-end;
+                width: 75%;
+
+                    @media @mobile {
+                        .displaycenter();
+                        justify-content: space-around;
+                        width: initial;
+                        padding-top: 3%;
+                    }
+
+            } // nav
+
+                    a {
+                        text-decoration: none;
+                        display: flex;
+                        color: black;
+                        padding-left: 15%;
+                        font-size: medium;
+
+                            @media @mobile {
+                                display: flex;
+                                padding-left: inherit;
+                            }
+
+                    } // a
+            
+
+    } //navbar
+
+
