--- a/less/variables.less
+++ b/less/variables.less
@@ -1,3 +1,5 @@
+// Media (Max Width 500px)
+@mobile: ~"(max-width:500px)";
 
 // Color assignments 
 @font-color: @shark;
@@ -12,3 +14,18 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+
+.content {
+    padding-left: 1%;
+    padding-right: 0;
+}
+
+.displaycolumn {
+    display: flex;
+    flex-direction: column;
+}
+
+.displaycenter {
+    display: flex;
+    align-items: center;
+}
